communicate the ui with api

--- a/src/app/component/cPanel/chart-account/chart-account.component.css
+++ b/src/app/component/cPanel/chart-account/chart-account.component.css
@@ -6,3 +6,39 @@
     font-size: .85rem;
     height: auto
 }
+
+
+.success-class{
+    background-color: rgb(11, 193, 11);
+    color: white;
+    position: relative;
+    font-size: 15px;
+    font-weight: bold;
+    align-items: center;
+    padding-left: 15%;
+    margin-top: 1px;
+    margin-bottom: 15px;
+}
+
+.validation-class{
+  background-color: rgb(214, 208, 208);
+  color: black;
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+  align-items: center;
+  padding-left: 15%;
+  margin-top: 1px;
+  margin-bottom: 15px;
+}
+.error-class{
+    background-color: red;
+    color: white;
+    position: relative;
+    font-size: 15px;
+    font-weight: bold;
+    align-items: center;
+    padding-left: 15%;
+    margin-top: 1px;
+    margin-bottom: 15px;
+}
