--- a/src/app/component/cPanel/chart-account/chart-account.component.html
+++ b/src/app/component/cPanel/chart-account/chart-account.component.html
@@ -22,7 +22,7 @@
     type="button" style="background-color: #192440; border-color: #00FFAD; border-width: 2px; color: white;">NEW</button>
    </div>
    </div>
-    <table class="table">
+    <table class="table" *ngIf="filteredAccounts.length > 0">
         <thead>
           <tr>
             <th scope="col">ACC Code</th>
@@ -47,6 +47,11 @@
             </tr>
         </tbody>
       </table>
+      <div>
+        <div class="validation-class">
+            There's no account yet, you have to add an account
+        </div>
+      </div>
     
 </div>
 
@@ -89,7 +94,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col">
                         <label for="accountCode" id="title" data-i18n="accountCode" name="accountCode"  style="color: black; font-weight: bold; ">Account Code</label>
                         <input type="text" [(ngModel)]="accountData.accountCode" name="accountCode" minlength="3" class="form-control" id="accountCode" #accountCode="ngModel" ngModel required style="background-color: white; color: black; border-color: black;">
                         <div *ngIf="accountCode.touched && accountCode.invalid" class="text-danger">
@@ -97,10 +102,20 @@
                             <div *ngIf="accountCode.errors?.['minLength']">Account Code must be at least 3 characters</div>
                           </div>
                     </div>
+                    
+                </div>
+                <div class="row">
                     <div class="form-group col-md-6">
-                        <label for="parentAccountId" id="title" data-i18n="name" name="parentAccountId"  style="color: black; font-weight: bold; ">Parent Account ID</label>
-                        <input  [(ngModel)]="accountData.parentAccountId" type="text" minlength="3" class="form-control" id="parentAccountId" name="parentAccountId" #parentAccountId="ngModel" ngModel style="background-color: white; color: black; border-color: black;">
-                       
+                        <label for="mainAccount" id="title" data-i18n="name" name="mainAccount"  style="color: black; font-weight: bold; ">Main Account ID</label>
+                        <select id="mainAccount" (change)="onFirstDropdownChange()" name="mainAccount" [(ngModel)]="selectedId" class="form-control" style="background-color: white; color: black; border-color: black;" #mainAccount="ngModel" ngModel>
+                            <option *ngFor="let value of dropdownValues" [value]="value.id">{{ value.title }}</option>
+                          </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="subMainAccount" id="title" data-i18n="name" name="subMainAccount"  style="color: black; font-weight: bold; ">Sub Main Account ID</label>
+                        <select id="subMainAccount" name="subMainAccount" [(ngModel)]="accountData.subMainAccount" class="form-control" style="background-color: white; color: black; border-color: black;" #subMainAccount="ngModel" ngModel>
+                            <option *ngFor="let value of secondDropdownValues" [value]="value.id">{{ value.title }}</option>
+                          </select>                       
                     </div>
                 </div>
                 <div class="form-group">
