add the api to the select of form and gert contact api

--- a/src/app/component/cPanel/contact/contact.component.html
+++ b/src/app/component/cPanel/contact/contact.component.html
@@ -58,17 +58,12 @@
         </div>
        
         <div class="modal-body">
-            <form id="myform" #form="ngForm" (ngSubmit)="addAccount(form)">
+            <form id="myform" #form="ngForm" (ngSubmit)="addContact(form)">
                 <div class="row">
                     <div class="form-group col-md-6">
-                        <label for="type" id="title" data-i18n="type" name="type"  style="color: black; font-weight: bold; ">Type</label>
-                        <select class="form-control" id="type" name="type" ngModel required>
-                            <option value="tenant">Tenant</option>
-                            <option value="customer">Customer</option>
-                            <option value="owner">Owner</option>
-                            <option value="supplier">Supplier</option>
-                            <option value="employee">Employee</option>
-                            <option value="account">Account</option>
+                          <label for="contactType" id="title" data-i18n="name" name="contactType"  style="color: black; font-weight: bold; ">Type</label>
+                        <select id="contactType" name="contactType" [(ngModel)]="selectedId" class="form-control" style="background-color: white; color: black; " #contactType="ngModel" ngModel>
+                            <option *ngFor="let value of ContactTypeValues" [value]="value.id">{{ value.title }}</option>
                           </select>
                     </div>
                     <div class="form-group col-md-6">
@@ -83,22 +78,24 @@
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="nameEng" style="color: black; font-weight: bold; ">Name (English)*:</label>
-                        <input type="text" id="nameEng" name="nameEng" class="form-control" ngModel required>
+                        <input type="text" id="nameEng" [(ngModel)]="contactData.nameEn" name="nameEng" class="form-control" ngModel required>
                     </div>
                     <div class="form-group col-md-6">
                         <label for="nameArab" style="color: black; font-weight: bold; ">Name (Arabic)*:</label>
-                        <input type="text" id="nameArab" name="nameArab" class="form-control" ngModel required>
+                        <input type="text" id="nameArab" name="nameArab" [(ngModel)]="contactData.nameAr"  class="form-control" ngModel required>
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="invoice"  id="title" style="color: black; font-weight: bold; ">Invoice Name:*</label>
-                    <input class="form-control" type="text" id="invoice" name="invoice" ngModel required>
+                        <input class="form-control" type="text" id="invoice" [(ngModel)]="contactData.invoiceNameEn"  name="invoice" ngModel required>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="nationality"  id="title" style="color: black; font-weight: bold; ">Nationality:</label>
-                    <input type="text" id="nationality" name="nationality" ngModel required>
-                    </div>
+                        <label for="nationality" id="title" data-i18n="name" name="nationality"  style="color: black; font-weight: bold; ">Nationality</label>
+                        <select id="nationality" name="nationality" [(ngModel)]="selectedNationalityValue" class="form-control" style="background-color: white; color: black; " #nationality="ngModel" ngModel>
+                          <option *ngFor="let value of NationalitiesValue" [value]="value.id">{{ value.title }}</option>
+                        </select>
+                  </div>
                 </div>
 
                 <div class="row">
@@ -140,7 +137,7 @@
                              <input class="form-control" type="text" id="passportNumber" name="passportNumber" ngModel>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="passportExpiry" style="color: black; font-weight: bold; ">Passport Expiry (dd/mm/yyyy):</label>
+                            <label for="passportExpiry" style="color: black; font-weight: bold; ">Passport Expiry(dd/mm/yyyy):</label>
                             <input class="form-control" type="text" id="passportExpiry" name="passportExpiry" ngModel>
                         </div>
                     </div>
@@ -151,13 +148,11 @@
                             <input class="form-control" type="text" id="accountNumber" name="accountNumber" ngModel>
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="bankName" style="color: black; font-weight: bold; ">Bank Name:</label>
-                            <select class="form-control" id="bankName" name="bankName" ngModel>
-                                <option value="adib">ADIB</option>
-                                <option value="cbd">CBD</option>
-                                <option value="ajman">Ajman</option>
+                            <label for="bankName" id="title" data-i18n="name" name="bankName"  style="color: black; font-weight: bold; ">Bank Name</label>
+                          <select id="bankName" name="bankName" [(ngModel)]="selectedBankId" class="form-control" style="background-color: white; color: black; " #bankName="ngModel" ngModel>
+                              <option *ngFor="let value of BankValues" [value]="value.id">{{ value.title }}</option>
                             </select>
-                        </div>
+                      </div>
                     </div>
 
                     <div class="row" >
